Fixing header colors in dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -114,6 +114,7 @@ table.core {
 
 @media (prefers-color-scheme: dark) {
 body, main { background: #1b262c; color: white; }
+h1 h2 h3 {color: white; }
 a { color: #21e6c1 }
 a:visited { color: #21e6c1 }
 .addr {
